--- a/foodCongress.html
+++ b/foodCongress.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>11th Property Developers Congress </title>
+    <title>Food Congress</title>
     <link rel="stylesheet" href="./assets/fonts/remixicon.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -19,40 +19,29 @@
                     <div class="col-md-3">
                         <div class="left-part">
                             <a href="/"> 
-                                <img src="./assets/img/logo.png" class="img-fluid" alt="logo">
+                                <img src="./assets/img/foodLogo.png" class="img-fluid" alt="logo">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-9">
                         <div class="right-part">
                             <div class="top-nav">
-                                <div class="container-fluid">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <ul class="list-unstyled lists">
-                                                <li class="list-inline-item">Datamatix</li>
-                                                <li class="list-inline-item">
-                                                    <a href="/index.html">Home</a>
-                                                </li>
-                                                <li class="list-inline-item">
-                                                    <a href="/propertyEvents.html"> Events Calander </a>
-                                                </li>
-                                                <li class="list-inline-item">
-                                                    <a href="/prop11th.html">Property Developers</a>
-                                                </li>
-                                                <li class="list-inline-item">Industry Contact</li>
-                                                <li class="list-inline-item">Contact Us</li>
-                                            </ul>
-                                        </div>
-                                        <!-- <div class="col-md-2 col-4">
-                                            <div class="langs text-end">
-                                                <span class="border-right pe-2">ENG</span>
-                                                <span class="ps-1">AR</span>
-                                            </div>
-                                        </div> -->
-                                    </div>
-                                </div>
+                                <ul class="list-unstyled lists">
+                                    <li class="list-inline-item">Datamatix</li>
+                                    <li class="list-inline-item">
+                                        <a href="/index.html">Home</a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a href="/foodEvents.html"> Events Calander </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a href="/foodCongress.html">Property Developers</a>
+                                    </li>
+                                    <li class="list-inline-item">Industry Contact</li>
+                                    <li class="list-inline-item">Contact Us</li>
+                                </ul>
                             </div>
+
 
                             <div class="nav1">
                                 <ul class="list-unstyled lists">
@@ -78,7 +67,7 @@
         <!-- start banner_main -->
 
         <div class="main-banner">
-            <img src="./assets/img/11thProp_banner.jpg" class="img-fluid" alt="banner" >
+            <img src="./assets/img/Food_Congress_image_8.jpg" class="img-fluid" alt="banner" >
         </div>
         <!-- end banner_main-->
 
@@ -91,8 +80,8 @@
                         </p>
                     </div>
                     <div class="col-md-3 col-12">
-                        <button class="btn btn-primary">
-                            EVENTS REGISTRATION 
+                        <button class="btn btn-danger">
+                            Events Calander 
                         </button>
                     </div>
                 </div>
@@ -184,7 +173,7 @@
         <br>
 
         <!-- start banners -->
-        <!-- <div class="bannerTop banner">
+        <!-- <div class="bannerTop">
 
             <div class="container">
                 <div class="row">
@@ -216,25 +205,38 @@
             <div class="over">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4 col-11 text-left">
+                        <div class="col-md-5 col-11 text-left">
                             <div class="banner-text">
                                 <h3>
-                                    NAVIGATING THE <br>
                                     REAL ESTATE <br>
-                                    HORIZON
+                                    FOOD <br>
+                                    ENTHUSIASTS <br>
+                                    TOGETHER
                                 </h3>
                                 <hr>
-                                <p>From An Aspiration for Success to the <br> Pinnacle of Excellence</p>
-                                <button class="btn btn-primary">FOR REGISTRATION</button>
+                                <p>
+                                    From an Aspiration for Success to the Pinnacle of Excellence 
+                                </p>
+                                <button class="btn btn-success">FOR REGISTRATION</button>
                             </div>
                         </div>
-                        <div class="col-md-8 col-1"></div>
+                        <div class="col-md-7 col-1"></div>
                     </div>
                 </div>
             </div>
         </div>
 
-        
+        <!-- <div class="container">
+            <h2 class="banner_title">Benchmarking and supporting government and business entities to reach the highest international standards</h2>
+            <p class="banner_text">
+                During the 19th and early 20th century’s, the pearling industry thrived in the relative 
+                calm at sea, providing both income and employment to the people of the GCC. 
+                It began to become a good economic resource for the local people. The decline of pearling 
+                in 1920s and 1930s resulted in a very difﬁcult era, with little opportunity to build any 
+                infrastructure.
+            </p>
+        </div> -->
+
         <div class="container">
             <h2 class="banner_title text-center" style="margin: 30px auto; width: 90%;">
                 Benchmarking and supporting government and business entities to reach the highest international standards</h2>
@@ -244,17 +246,19 @@
             <div class="over">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-8 col-1"></div>
-                        <div class="col-md-4 col-11 text-end">
+                        <div class="col-md-7 col-1"></div>
+                        <div class="col-md-5 col-11 text-end">
                             <div class="banner-text">
                                 <h3>
-                                    WHERE <br>
-                                    VISION MEETS <br>
-                                    INVESTMENT
+                                    DISCOVER, SHARE <br>
+                                    AND INDULGE IN <br>
+                                    FOOD EXCELLENCE
                                 </h3>
                                 <hr>
-                                <p>From An Aspiration for Success to the <br> Pinnacle of Excellence</p>
-                                <button class="btn btn-primary">FOR REGISTRATION</button>
+                                <p>
+                                    From an Aspiration for Success to the Pinnacle of Excellence 
+                                </p>
+                                <button class="btn btn-success">FOR REGISTRATION</button>
                             </div>
                         </div>
                     </div>
@@ -271,18 +275,22 @@
             <div class="over">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4 col-11 text-left">
+                        <div class="col-md-5 col-11 text-left">
                             <div class="banner-text">
                                 <h3>
-                                    REVOLUTIONIZING <br>
-                                    REAL ESTATE
+                                    TASTE THE <br>
+                                    FUTURE OF <br>
+                                    FOOD AT THE <br>
+                                    CONGRESS
                                 </h3>
                                 <hr>
-                                <p>From An Aspiration for Success to the <br> Pinnacle of Excellence</p>
-                                <button class="btn btn-primary">FOR REGISTRATION</button>
+                                <p>
+                                    From an Aspiration for Success to the Pinnacle of Excellence 
+                                </p>
+                                <button class="btn btn-success">FOR REGISTRATION</button>
                             </div>
                         </div>
-                        <div class="col-md-8 col-1"></div>
+                        <div class="col-md-7 col-1"></div>
                     </div>
                 </div>
             </div>
@@ -297,17 +305,19 @@
             <div class="over">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-8 col-1"></div>
-                        <div class="col-md-4 col-11 text-end">
+                        <div class="col-md-7 col-1"></div>
+                        <div class="col-md-5 col-11 text-end">
                             <div class="banner-text">
                                 <h3>
-                                    REALIZE <br>
-                                    YOUR PROPERTY <br>
-                                    DREAMS
+                                    A DELICIOUS<br>
+                                    DIALOGUE OF <br>
+                                    GLOBAL CUISINES
                                 </h3>
                                 <hr>
-                                <p>From An Aspiration for Success to the <br> Pinnacle of Excellence</p>
-                                <button class="btn btn-primary">FOR REGISTRATION</button>
+                                <p>
+                                    From an Aspiration for Success to the Pinnacle of Excellence 
+                                </p>
+                                <button class="btn btn-success">FOR REGISTRATION</button>
                             </div>
                         </div>
                     </div>
@@ -324,19 +334,21 @@
             <div class="over">
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-4 col-11 text-left">
+                        <div class="col-md-5 col-11 text-left">
                             <div class="banner-text">
                                 <h3>
-                                    SHAPING THE <br>
-                                    FUTURE OF <br>
-                                    REAL ESTATE
+                                    WHERE FOOD <br>
+                                    AND IDEAS<br>
+                                    CONVERGE
                                 </h3>
                                 <hr>
-                                <p>From An Aspiration for Success to the <br> Pinnacle of Excellence</p>
-                                <button class="btn btn-primary">FOR REGISTRATION</button>
+                                <p>
+                                    From an Aspiration for Success to the Pinnacle of Excellence 
+                                </p>
+                                <button class="btn btn-success">FOR REGISTRATION</button>
                             </div>
                         </div>
-                        <div class="col-md-8 col-1"></div>
+                        <div class="col-md-7 col-1"></div>
                     </div>
                 </div>
             </div>
@@ -728,7 +740,7 @@
                         <form>
                             <div class="d-flex">
                                 <input type="text" class="form-control me-3" id="subscribe">
-                                <button type="submit" class="btn btn-primary d-flex">
+                                <button type="submit" class="btn btn-success d-flex">
                                     Submit
                                     <i class="ri-arrow-right-s-line ml-1"></i>
                                 </button>
