--- a/foodEvents.html
+++ b/foodEvents.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Property Events </title>
+    <title>Food Events </title>
     <link rel="stylesheet" href="./assets/fonts/remixicon.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -19,39 +19,27 @@
                     <div class="col-md-3">
                         <div class="left-part">
                             <a href="/"> 
-                                <img src="./assets/img/logo.png" class="img-fluid" alt="logo">
+                                <img src="./assets/img/foodLogo.png" class="img-fluid" alt="logo">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-9">
                         <div class="right-part">
                             <div class="top-nav">
-                                <div class="container-fluid">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <ul class="list-unstyled lists">
-                                                <li class="list-inline-item">Datamatix</li>
-                                                <li class="list-inline-item">
-                                                    <a href="/index.html">Home</a>
-                                                </li>
-                                                <li class="list-inline-item">
-                                                    <a href="/propertyEvents.html"> Events Calander </a>
-                                                </li>
-                                                <li class="list-inline-item">
-                                                    <a href="/prop11th.html">Property Developers</a>
-                                                </li>
-                                                <li class="list-inline-item">Industry Contact</li>
-                                                <li class="list-inline-item">Contact Us</li>
-                                            </ul>
-                                        </div>
-                                        <!-- <div class="col-md-2 col-4">
-                                            <div class="langs text-end">
-                                                <span class="border-right pe-2">ENG</span>
-                                                <span class="ps-1">AR</span>
-                                            </div>
-                                        </div> -->
-                                    </div>
-                                </div>
+                                <ul class="list-unstyled lists">
+                                    <li class="list-inline-item">Datamatix</li>
+                                    <li class="list-inline-item">
+                                        <a href="/index.html">Home</a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a href="/foodEvents.html"> Events Calander </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a href="/foodCongress.html">Property Developers</a>
+                                    </li>
+                                    <li class="list-inline-item">Industry Contact</li>
+                                    <li class="list-inline-item">Contact Us</li>
+                                </ul>
                             </div>
 
                             <div class="nav1">
@@ -78,7 +66,7 @@
         <!-- start banner_main -->
 
         <div class="main-banner">
-            <img src="./assets/img/event-main-banner.jpg" class="img-fluid" alt="banner" >
+            <img src="./assets/img/Food_Congress_image_1.jpg" class="img-fluid" alt="banner" >
         </div>
         <!-- end banner_main-->
 
@@ -395,7 +383,7 @@
                                 <h6>MARCH 23, 2022</h6>
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
-                            <button class="btn btn-primary">
+                            <button class="btn btn-success">
                                 <a href="/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
@@ -412,7 +400,7 @@
                                 <h6>MARCH 23, 2022</h6>
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
-                            <button class="btn btn-primary">
+                            <button class="btn btn-success">
                                 <a href="/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
@@ -429,7 +417,7 @@
                                 <h6>MARCH 23, 2022</h6>
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
-                            <button class="btn btn-primary">
+                            <button class="btn btn-success">
                                 <a href="/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
@@ -446,7 +434,7 @@
                                 <h6>MARCH 23, 2022</h6>
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
-                            <button class="btn btn-primary">
+                            <button class="btn btn-success">
                                 <a href="/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
@@ -463,7 +451,7 @@
                                 <h6>MARCH 23, 2022</h6>
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
-                            <button class="btn btn-primary">
+                            <button class="btn btn-success">
                                 <a href="/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
@@ -480,7 +468,7 @@
                                 <h6>MARCH 23, 2022</h6>
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
-                            <button class="btn btn-primary">
+                            <button class="btn btn-success">
                                 <a href="/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
@@ -497,7 +485,7 @@
                                 <h6>MARCH 23, 2022</h6>
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
-                            <button class="btn btn-primary">
+                            <button class="btn btn-success">
                                 <a href="/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
@@ -514,7 +502,7 @@
                                 <h6>MARCH 23, 2022</h6>
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
-                            <button class="btn btn-primary">
+                            <button class="btn btn-success">
                                 <a href="/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
@@ -531,7 +519,7 @@
                                 <h6>MARCH 23, 2022</h6>
                                 <p>Dubai, United Arab Emirates</p>
                             </div>
-                            <button class="btn btn-primary">
+                            <button class="btn btn-success">
                                 <a href="/">FOR REGISTRATION</a>
                                 <i class="ri-arrow-right-s-line ms-2"></i>
                             </button>
@@ -551,7 +539,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <button class="btn btn-primary">GALLERY</button>
+                        <button class="btn btn-success">GALLERY</button>
                     </div>
                 </div>
                 <div class="row">
@@ -710,7 +698,7 @@
                         <form>
                             <div class="d-flex">
                                 <input type="text" class="form-control me-3" id="subscribe">
-                                <button type="submit" class="btn btn-primary d-flex">
+                                <button type="submit" class="btn btn-success d-flex">
                                     Submit
                                     <i class="ri-arrow-right-s-line ml-1"></i>
                                 </button>
