--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Property Developers Congress </title>
+    <title>Food Congress Home</title>
     <link rel="stylesheet" href="./assets/fonts/remixicon.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -19,40 +19,29 @@
                     <div class="col-md-3">
                         <div class="left-part">
                             <a href="/"> 
-                                <img src="./assets/img/logo.png" class="img-fluid" alt="logo">
+                                <img src="./assets/img/foodLogo.png" class="img-fluid" alt="logo">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-9">
                         <div class="right-part">
                             <div class="top-nav">
-                                <div class="container-fluid">
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <ul class="list-unstyled lists">
-                                                <li class="list-inline-item">Datamatix</li>
-                                                <li class="list-inline-item">
-                                                    <a href="/index.html">Home</a>
-                                                </li>
-                                                <li class="list-inline-item">
-                                                    <a href="/propertyEvents.html"> Events Calander </a>
-                                                </li>
-                                                <li class="list-inline-item">
-                                                    <a href="/prop11th.html">Property Developers</a>
-                                                </li>
-                                                <li class="list-inline-item">Industry Contact</li>
-                                                <li class="list-inline-item">Contact Us</li>
-                                            </ul>
-                                        </div>
-                                        <!-- <div class="col-md-2 col-4">
-                                            <div class="langs text-end">
-                                                <span class="border-right pe-2">ENG</span>
-                                                <span class="ps-1">AR</span>
-                                            </div>
-                                        </div> -->
-                                    </div>
-                                </div>
+                                <ul class="list-unstyled lists">
+                                    <li class="list-inline-item">Datamatix</li>
+                                    <li class="list-inline-item">
+                                        <a href="/index.html">Home</a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a href="/foodEvents.html"> Events Calander </a>
+                                    </li>
+                                    <li class="list-inline-item">
+                                        <a href="/foodCongress.html">Property Developers</a>
+                                    </li>
+                                    <li class="list-inline-item">Industry Contact</li>
+                                    <li class="list-inline-item">Contact Us</li>
+                                </ul>
                             </div>
+
 
                             <div class="nav1">
                                 <ul class="list-unstyled lists">
@@ -78,7 +67,7 @@
         <!-- start banner_main -->
 
         <div class="main-banner">
-            <img src="./assets/img/main_banner.jpg" class="img-fluid" alt="banner" >
+            <img src="./assets/img/Food_Congress_image_8.jpg" class="img-fluid" alt="banner" >
         </div>
         <!-- end banner_main-->
 
@@ -220,13 +209,15 @@
                             <div class="banner-text">
                                 <h3>
                                     REAL ESTATE <br>
-                                    EXCELLENCE, <br>
-                                    EVERY TIME.
+                                    FOOD <br>
+                                    ENTHUSIASTS <br>
+                                    TOGETHER
                                 </h3>
+                                <hr>
                                 <p>
-                                    Quater Century <br>
-                                    Leadership Development and Global Knowledge Exchange and Best Practices Discussion
+                                    From an Aspiration for Success to the Pinnacle of Excellence 
                                 </p>
+                                <button class="btn btn-success">FOR REGISTRATION</button>
                             </div>
                         </div>
                         <div class="col-md-7 col-1"></div>
@@ -259,14 +250,15 @@
                         <div class="col-md-5 col-11 text-end">
                             <div class="banner-text">
                                 <h3>
-                                    BEST QUALITY <br>
-                                    CONSTRUCTION <br>
-                                    MATERIAL
+                                    DISCOVER, SHARE <br>
+                                    AND INDULGE IN <br>
+                                    FOOD EXCELLENCE
                                 </h3>
-                                <p class="ms-auto">
-                                    Quater Century <br>
-                                    Leadership Development and Global Knowledge Exchange and Best Practices Discussion
+                                <hr>
+                                <p>
+                                    From an Aspiration for Success to the Pinnacle of Excellence 
                                 </p>
+                                <button class="btn btn-success">FOR REGISTRATION</button>
                             </div>
                         </div>
                     </div>
@@ -286,15 +278,16 @@
                         <div class="col-md-5 col-11 text-left">
                             <div class="banner-text">
                                 <h3>
-                                    INNOVATING <br>
-                                    ARCHITECTURE, <br>
-                                    REDEFINING <br>
-                                    ENVIRONMENTS.
+                                    TASTE THE <br>
+                                    FUTURE OF <br>
+                                    FOOD AT THE <br>
+                                    CONGRESS
                                 </h3>
+                                <hr>
                                 <p>
-                                    Quater Century <br>
-                                    Leadership Development and Global Knowledge Exchange and Best Practices Discussion
+                                    From an Aspiration for Success to the Pinnacle of Excellence 
                                 </p>
+                                <button class="btn btn-success">FOR REGISTRATION</button>
                             </div>
                         </div>
                         <div class="col-md-7 col-1"></div>
@@ -316,14 +309,15 @@
                         <div class="col-md-5 col-11 text-end">
                             <div class="banner-text">
                                 <h3>
-                                    REALIZE<br>
-                                    YOUR PROPERTY <br>
-                                    DREAMS
+                                    A DELICIOUS<br>
+                                    DIALOGUE OF <br>
+                                    GLOBAL CUISINES
                                 </h3>
-                                <p class="ms-auto">
-                                    Quater Century <br>
-                                    Leadership Development and Global Knowledge Exchange and Best Practices Discussion
+                                <hr>
+                                <p>
+                                    From an Aspiration for Success to the Pinnacle of Excellence 
                                 </p>
+                                <button class="btn btn-success">FOR REGISTRATION</button>
                             </div>
                         </div>
                     </div>
@@ -343,14 +337,15 @@
                         <div class="col-md-5 col-11 text-left">
                             <div class="banner-text">
                                 <h3>
-                                    RAISING <br>
-                                    THE BAR IN <br>
-                                    CONSTRUCTION.
+                                    WHERE FOOD <br>
+                                    AND IDEAS<br>
+                                    CONVERGE
                                 </h3>
+                                <hr>
                                 <p>
-                                    Quater Century <br>
-                                    Leadership Development and Global Knowledge Exchange and Best Practices Discussion
+                                    From an Aspiration for Success to the Pinnacle of Excellence 
                                 </p>
+                                <button class="btn btn-success">FOR REGISTRATION</button>
                             </div>
                         </div>
                         <div class="col-md-7 col-1"></div>
@@ -579,7 +574,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <button class="btn btn-primary">GALLERY</button>
+                        <button class="btn btn-success">GALLERY</button>
                     </div>
                 </div>
                 <div class="row">
@@ -743,7 +738,7 @@
                         <form>
                             <div class="d-flex">
                                 <input type="text" class="form-control me-3" id="subscribe">
-                                <button type="submit" class="btn btn-primary d-flex">
+                                <button type="submit" class="btn btn-success d-flex">
                                     Submit
                                     <i class="ri-arrow-right-s-line ml-1"></i>
                                 </button>
