--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div>
                     <div class="col-md-3 col-12">
                         <button class="btn btn-danger">
-                            Events Calander 
+                            <a href="./foodEvents.html">EVENTS CALENDAR </a>
                         </button>
                     </div>
                 </div>
