--- a/foodEvents.html
+++ b/foodEvents.html
@@ -66,7 +66,9 @@
         <!-- start banner_main -->
 
         <div class="main-banner">
-            <img src="./assets/img/Food_Congress_image_1.jpg" class="img-fluid" alt="banner" >
+            <a href="./foodEvents.html">
+                <img src="./assets/img/Food_Congress_image_9.jpg" class="img-fluid" alt="banner" >
+            </a>
         </div>
         <!-- end banner_main-->
 
