--- a/foodCongress.html
+++ b/foodCongress.html
@@ -575,7 +575,7 @@
                 <div class="row">
                     <div class="col-md-4 col-0"></div>
                     <div class="col-md-4 col-12">
-                        <button class="btn btn-primary">THE CONGRESS SPEAKERS</button>
+                        <button class="btn btn-success">THE CONGRESS SPEAKERS</button>
                     </div>
                     <div class="col-md-4 col-0"></div>
                 </div>
